--- a/package.json
+++ b/package.json
@@ -11,14 +11,16 @@
   "author": "sourabh kimmi",
   "license": "ISC",
   "dependencies": {
-    "aws-sdk": "^2.1258.0",
-    "bcrypt": "^5.1.0",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
+    "aws-sdk": "^2.1189.0",
+    "bcrypt": "^5.0.1",
+    "email-validator": "^2.0.4",
+    "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.7.2",
+    "moment": "^2.29.4",
+    "mongoose": "^6.5.1",
     "multer": "^1.4.5-lts.1",
-    "redis": "^4.5.0",
-    "util": "^0.12.5"
+    "nodemon": "^2.0.19",
+    "redis": "^3.1.2",
+    "util": "^0.12.4"
   }
 }
